@@ -1,0 +1,4 @@
+
+cdef class Proxy:
+    cdef public object current_error
+
