@@ -88,6 +88,8 @@ if os.path.exists("MANIFEST.in"):
             'rasterio._drivers', ['rasterio/_drivers.pyx'], **ext_options),
         Extension(
             'rasterio._warp', ['rasterio/_warp.pyx'], **ext_options),
+        Extension(
+            'rasterio._err', ['rasterio/_err.pyx'], **ext_options),
             ])
 
 # If there's no manifest template, as in an sdist, we just specify .c files.
@@ -103,6 +105,8 @@ else:
             'rasterio._drivers', ['rasterio/_drivers.c'], **ext_options),
         Extension(
             'rasterio._warp', ['rasterio/_warp.cpp'], **ext_options),
+        Extension(
+            'rasterio._err', ['rasterio/_err.cpp'], **ext_options),
             ]
 
 with open('README.rst') as f:
